# polars-gpu-test

./: .gitignore  download_dataset.py  polars-gpu-test.ipynb  pyproject.toml
